--- a/public/quixlab/css/style.css
+++ b/public/quixlab/css/style.css
@@ -7600,12 +7600,12 @@ sub {
   .nav-header .brand-logo {
     z-index: 999; }
     .nav-header .brand-logo a {
-      padding: 1.607rem 1.8125rem;
+      padding: 20px 40px;
       display: block; }
       .nav-header .brand-logo a i {
         font-size: 1.375rem; }
       .nav-header .brand-logo a b img {
-        max-width: 1.5625rem; }
+        max-width: 40px; }
       .nav-header .brand-logo a span {
         font-size: 1.125rem; }
 
